// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lifecycle stability can not change from any stability but wip 1`] = `
Object {
  "base": Object {
    "info": Object {
      "title": "OpenAPI",
      "version": "0.0.0",
    },
    "openapi": "3.0.1",
    "paths": Object {
      "/example": Object {
        "get": Object {
          "responses": Object {},
        },
      },
    },
    "x-snyk-api-stability": "ga",
  },
  "changelog": Array [
    Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "info": Object {
            "title": "OpenAPI",
            "version": "0.0.0",
          },
          "openapi": "3.0.1",
          "x-snyk-api-stability": "beta",
        },
        "before": Object {
          "info": Object {
            "title": "OpenAPI",
            "version": "0.0.0",
          },
          "openapi": "3.0.1",
          "x-snyk-api-stability": "ga",
        },
      },
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
    },
  ],
  "next": Object {
    "info": Object {
      "title": "OpenAPI",
      "version": "0.0.0",
    },
    "openapi": "3.0.1",
    "paths": Object {
      "/example": Object {
        "get": Object {
          "responses": Object {},
        },
      },
    },
    "x-snyk-api-stability": "beta",
  },
  "results": Array [
    Object {
      "change": Object {
        "changed": Object {
          "after": "beta",
          "before": "ga",
        },
        "location": Object {
          "conceptualLocation": Object {
            "method": "",
            "path": "Resource Document",
          },
          "conceptualPath": Array [
            "x-snyk-api-stability",
          ],
          "jsonPath": "/x-snyk-api-stability",
          "kind": "SnykStability",
        },
      },
      "condition": "not change unless it was wip",
      "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/version.md#promoting-stability-of-a-resource-over-time",
      "effectiveOnDate": undefined,
      "error": "stability transition from 'ga' to 'beta' not allowed",
      "isMust": true,
      "isShould": false,
      "passed": false,
      "where": "published stability: ",
    },
  ],
}
`;

exports[`lifecycle stability must be one of the allowed values 1`] = `
Object {
  "base": Object {
    "info": Object {
      "title": "OpenAPI",
      "version": "0.0.0",
    },
    "openapi": "3.0.1",
    "paths": Object {
      "/example": Object {
        "get": Object {
          "responses": Object {},
        },
      },
    },
  },
  "changelog": Array [
    Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "info": Object {
            "title": "OpenAPI",
            "version": "0.0.0",
          },
          "openapi": "3.0.1",
          "x-snyk-api-stability": "published",
        },
        "before": Object {
          "info": Object {
            "title": "OpenAPI",
            "version": "0.0.0",
          },
          "openapi": "3.0.1",
        },
      },
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
    },
  ],
  "next": Object {
    "info": Object {
      "title": "OpenAPI",
      "version": "0.0.0",
    },
    "openapi": "3.0.1",
    "paths": Object {
      "/example": Object {
        "get": Object {
          "responses": Object {},
        },
      },
    },
    "x-snyk-api-stability": "published",
  },
  "results": Array [
    Object {
      "change": Object {
        "changed": Object {
          "after": "published",
          "before": undefined,
        },
        "location": Object {
          "conceptualLocation": Object {
            "method": "",
            "path": "Resource Document",
          },
          "conceptualPath": Array [
            "x-snyk-api-stability",
          ],
          "jsonPath": "/x-snyk-api-stability",
          "kind": "SnykStability",
        },
      },
      "condition": "be provided for every resource document",
      "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/version.md#stability-levels",
      "effectiveOnDate": undefined,
      "error": "published must be one of allowed values wip,experimental,beta,ga",
      "isMust": true,
      "isShould": false,
      "passed": false,
      "where": "published stability: ",
    },
  ],
}
`;

exports[`lifecycle stability must be provided 1`] = `
Object {
  "base": Object {
    "info": Object {
      "title": "OpenAPI",
      "version": "0.0.0",
    },
    "openapi": "3.0.1",
    "paths": Object {
      "/example": Object {
        "get": Object {
          "responses": Object {},
        },
      },
    },
  },
  "changelog": Array [],
  "next": Object {
    "info": Object {
      "title": "OpenAPI",
      "version": "0.0.0",
    },
    "openapi": "3.0.1",
    "paths": Object {
      "/example": Object {
        "get": Object {
          "responses": Object {},
        },
      },
    },
  },
  "results": Array [
    Object {
      "change": Object {
        "changed": Object {
          "after": undefined,
          "before": undefined,
        },
        "location": Object {
          "conceptualLocation": Object {
            "method": "",
            "path": "Resource Document",
          },
          "conceptualPath": Array [
            "x-snyk-api-stability",
          ],
          "jsonPath": "/x-snyk-api-stability",
          "kind": "SnykStability",
        },
      },
      "condition": "be provided for every resource document",
      "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/version.md#stability-levels",
      "effectiveOnDate": undefined,
      "error": "undefined must be one of allowed values wip,experimental,beta,ga",
      "isMust": true,
      "isShould": false,
      "passed": false,
      "where": "published stability: ",
    },
  ],
}
`;

exports[`lifecycle stability wip can change to another maturity 1`] = `
Object {
  "base": Object {
    "info": Object {
      "title": "OpenAPI",
      "version": "0.0.0",
    },
    "openapi": "3.0.1",
    "paths": Object {
      "/example": Object {
        "get": Object {
          "responses": Object {},
        },
      },
    },
    "x-snyk-api-stability": "wip",
  },
  "changelog": Array [
    Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "info": Object {
            "title": "OpenAPI",
            "version": "0.0.0",
          },
          "openapi": "3.0.1",
          "x-snyk-api-stability": "beta",
        },
        "before": Object {
          "info": Object {
            "title": "OpenAPI",
            "version": "0.0.0",
          },
          "openapi": "3.0.1",
          "x-snyk-api-stability": "wip",
        },
      },
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
    },
  ],
  "next": Object {
    "info": Object {
      "title": "OpenAPI",
      "version": "0.0.0",
    },
    "openapi": "3.0.1",
    "paths": Object {
      "/example": Object {
        "get": Object {
          "responses": Object {},
        },
      },
    },
    "x-snyk-api-stability": "beta",
  },
  "results": Array [
    Object {
      "change": Object {
        "changed": Object {
          "after": "beta",
          "before": "wip",
        },
        "location": Object {
          "conceptualLocation": Object {
            "method": "",
            "path": "Resource Document",
          },
          "conceptualPath": Array [
            "x-snyk-api-stability",
          ],
          "jsonPath": "/x-snyk-api-stability",
          "kind": "SnykStability",
        },
      },
      "condition": "not change unless it was wip",
      "docsLink": "https://github.com/snyk/sweater-comb/blob/main/docs/version.md#promoting-stability-of-a-resource-over-time",
      "effectiveOnDate": undefined,
      "isMust": true,
      "isShould": false,
      "passed": true,
      "where": "published stability: ",
    },
  ],
}
`;

exports[`lifecycle sunset fails when the file was removed and not deprecated 1`] = `
Object {
  "base": Object {
    "info": Object {
      "title": "OpenAPI",
      "version": "0.0.0",
    },
    "openapi": "3.0.1",
    "paths": Object {
      "/example": Object {
        "get": Object {
          "responses": Object {},
        },
      },
    },
  },
  "changelog": Array [
    Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "info": Object {
            "title": "OpenAPI",
            "version": "0.0.0",
          },
          "openapi": "3.0.1",
          "x-optic-ci-empty-spec": true,
        },
        "before": Object {
          "info": Object {
            "title": "OpenAPI",
            "version": "0.0.0",
          },
          "openapi": "3.0.1",
        },
      },
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
    },
  ],
  "next": Object {
    "info": Object {
      "title": "OpenAPI",
      "version": "0.0.0",
    },
    "openapi": "3.0.1",
    "paths": Object {
      "/example": Object {
        "get": Object {
          "responses": Object {},
        },
      },
    },
    "x-optic-ci-empty-spec": true,
  },
  "results": Array [
    Object {
      "change": Object {
        "added": Object {
          "changeDate": "2021-10-10",
          "changeResource": "Example",
          "changeVersion": Object {
            "date": "2021-10-10",
            "stability": "ga",
          },
          "resourceVersions": Object {},
        },
        "changeType": "added",
        "location": Object {
          "conceptualLocation": Object {
            "method": "",
            "path": "Entire Resource",
          },
          "conceptualPath": Array [],
          "jsonPath": "/",
          "kind": "ContextRule",
        },
      },
      "condition": "follow sunset rules",
      "docsLink": undefined,
      "effectiveOnDate": undefined,
      "error": "expected Example to be deprecated before removing",
      "isMust": true,
      "isShould": false,
      "passed": false,
      "where": "api lifeycle: ",
    },
  ],
}
`;

exports[`lifecycle sunset sunset schedule fails when the schedule isn't met 1`] = `
Object {
  "base": Object {
    "info": Object {
      "title": "OpenAPI",
      "version": "0.0.0",
    },
    "openapi": "3.0.1",
    "paths": Object {
      "/example": Object {
        "get": Object {
          "responses": Object {},
        },
      },
    },
  },
  "changelog": Array [
    Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "info": Object {
            "title": "OpenAPI",
            "version": "0.0.0",
          },
          "openapi": "3.0.1",
          "x-optic-ci-empty-spec": true,
        },
        "before": Object {
          "info": Object {
            "title": "OpenAPI",
            "version": "0.0.0",
          },
          "openapi": "3.0.1",
        },
      },
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
    },
  ],
  "next": Object {
    "info": Object {
      "title": "OpenAPI",
      "version": "0.0.0",
    },
    "openapi": "3.0.1",
    "paths": Object {
      "/example": Object {
        "get": Object {
          "responses": Object {},
        },
      },
    },
    "x-optic-ci-empty-spec": true,
  },
  "results": Array [
    Object {
      "change": Object {
        "added": Object {
          "changeDate": "2021-10-20",
          "changeResource": "Example",
          "changeVersion": Object {
            "date": "2021-10-10",
            "stability": "beta",
          },
          "resourceVersions": Object {
            "Example": Object {
              "2021-10-10": Object {
                "beta": Object {
                  "deprecatedBy": Object {
                    "date": "2021-10-20",
                    "stability": "ga",
                  },
                },
              },
            },
          },
        },
        "changeType": "added",
        "location": Object {
          "conceptualLocation": Object {
            "method": "",
            "path": "Entire Resource",
          },
          "conceptualPath": Array [],
          "jsonPath": "/",
          "kind": "ContextRule",
        },
      },
      "condition": "follow sunset rules",
      "docsLink": undefined,
      "effectiveOnDate": undefined,
      "error": "expected beta resource Example to be deprecated 90 days",
      "isMust": true,
      "isShould": false,
      "passed": false,
      "where": "api lifeycle: ",
    },
  ],
}
`;

exports[`lifecycle sunset sunset schedule passes when the schedule is met 1`] = `
Object {
  "base": Object {
    "info": Object {
      "title": "OpenAPI",
      "version": "0.0.0",
    },
    "openapi": "3.0.1",
    "paths": Object {
      "/example": Object {
        "get": Object {
          "responses": Object {},
        },
      },
    },
  },
  "changelog": Array [
    Object {
      "changeType": "changed",
      "changed": Object {
        "after": Object {
          "info": Object {
            "title": "OpenAPI",
            "version": "0.0.0",
          },
          "openapi": "3.0.1",
          "x-optic-ci-empty-spec": true,
        },
        "before": Object {
          "info": Object {
            "title": "OpenAPI",
            "version": "0.0.0",
          },
          "openapi": "3.0.1",
        },
      },
      "location": Object {
        "conceptualLocation": Object {},
        "conceptualPath": Array [],
        "jsonPath": "",
        "kind": "specification",
      },
    },
  ],
  "next": Object {
    "info": Object {
      "title": "OpenAPI",
      "version": "0.0.0",
    },
    "openapi": "3.0.1",
    "paths": Object {
      "/example": Object {
        "get": Object {
          "responses": Object {},
        },
      },
    },
    "x-optic-ci-empty-spec": true,
  },
  "results": Array [
    Object {
      "change": Object {
        "added": Object {
          "changeDate": "2022-02-01",
          "changeResource": "Example",
          "changeVersion": Object {
            "date": "2021-10-10",
            "stability": "beta",
          },
          "resourceVersions": Object {
            "Example": Object {
              "2021-10-10": Object {
                "beta": Object {
                  "deprecatedBy": Object {
                    "date": "2021-10-20",
                    "stability": "ga",
                  },
                },
              },
            },
          },
        },
        "changeType": "added",
        "location": Object {
          "conceptualLocation": Object {
            "method": "",
            "path": "Entire Resource",
          },
          "conceptualPath": Array [],
          "jsonPath": "/",
          "kind": "ContextRule",
        },
      },
      "condition": "follow sunset rules",
      "docsLink": undefined,
      "effectiveOnDate": undefined,
      "isMust": true,
      "isShould": false,
      "passed": true,
      "where": "api lifeycle: ",
    },
  ],
}
`;
